Fix margin-bottom spacing for chat tab list items in main.scss

--- a/packages/custom-chat/src/assets/main.scss
+++ b/packages/custom-chat/src/assets/main.scss
@@ -35,7 +35,7 @@ main {
     li {
       list-style: none;
       display: flex;
-      margin-bottom: var(--spacing--C);
+      margin-bottom: var(--spacing--B);
 
       a.button {
         flex: 1;
